# rs-football-3d

./: Cargo.toml  README.md
assets/: goal_frame.glb  goal_sequence.json  pitch.glb  player_blue.glb  player_red.glb
src/: data.rs  main.rs  player.rs
