[package]
name = "rs-football-3d"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = {version = "0.9", features = ["dynamic"]}
bevy-inspector-egui = "0.14.0"
bevy_framepace = "0.9.1"
serde = "1.0.151"
serde_derive = "1.0.151"
serde_json = "1.0.91"
cute = "0.3.0"




